# digital-twin

./: .gitignore  README.md  README_EN.md  pyproject.toml
agentic_search/: constants.py  diary.py  indexing.py  rag_node.py
feishu_bridge/: bridge.py  bridge_schema.py
nanobot/agent/: context.py  loop.py
nanobot/channels/: feishu.py
nanobot/cli/: commands.py
nanobot/config/: schema.py
nanobot/providers/: litellm_provider.py
nanobot/skills/lark-slides/scripts/: template_tool.py  template_tool_test.py  xml_text_overlap_lint.py  xml_text_overlap_lint_test.py
