[project]
name = "digital-secretary"
version = "0.1.0"
description = "A personal digital secretary powered by AI agents"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "digital-secretary contributors"}
]
keywords = ["ai", "agent", "digital-secretary", "personal-assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.9.0",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "websockets>=12.0",
    "websocket-client>=1.6.0",
    "httpx>=0.25.0",
    "loguru>=0.7.0",
    "readability-lxml>=0.8.0",
    "rich>=13.0.0",
    "croniter>=2.0.0",
    "python-telegram-bot>=21.0",
    "langchain>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "chromadb>=1.5.9",
    "jieba>=0.42.1",
    "rank-bm25>=0.2.2",
    "lark-oapi>=1.6.8",
    "aiofiles>=25.1.0",
    "langgraph>=1.2.2",
    "langchain-litellm>=0.6.6",
    "flagembedding>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
digital-secretary = "nanobot.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "nanobot",
    "agentic_search",
    "feishu_bridge",
]

# Include non-Python files in skills
[tool.hatch.build]
include = [
    "nanobot/**/*.py",
    "nanobot/skills/**/*.md",
    "nanobot/skills/**/*.sh",
    "agentic_search/**/*.py",
    "feishu_bridge/**/*.py",
]

[tool.hatch.build.targets.sdist]
include = [
    "nanobot/",
    "agentic_search/",
    "feishu_bridge/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "build>=1.5.0",
    "twine>=6.2.0",
]
